--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ZeroToOneSchool",
+  "name": "ZeroToOne",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Nghia Ngo",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
@@ -25,8 +25,10 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
+    "@types/lodash": "^4.14.86",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.4",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
