--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lodash": "^4.17.4",
+    "moment": "^2.19.3",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
